--- a/src/Pages/Payout/Payout.module.scss
+++ b/src/Pages/Payout/Payout.module.scss
@@ -14,6 +14,8 @@
     & > h2 {
       width: 65%;
       margin: 1rem;
+      padding-bottom: 1rem;
+      border-bottom: 2px solid #000;
     }
 
     &_items {
@@ -109,6 +111,11 @@
       padding: 2rem 0;
       font-size: 1.5rem;
       color: #00000080;
+      width: 100%;
+      height: 50vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   }
 
