--- a/src/Pages/Shop/Shop.module.scss
+++ b/src/Pages/Shop/Shop.module.scss
@@ -141,7 +141,7 @@
     gap: 0.5rem;
 
     position: fixed;
-    bottom: 0;
+    bottom: 2.5rem;
     left: 50%;
     transform: translateX(-50%);
 
