--- a/src/Pages/Shop/Shop.module.scss
+++ b/src/Pages/Shop/Shop.module.scss
@@ -147,7 +147,7 @@
     gap: 0.5rem;
 
     position: fixed;
-    bottom: 2.5rem;
+    bottom: 0;
     left: 50%;
     transform: translateX(-50%);
 
